--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
-
+    <color name="colorLight">#FFFFFF</color>
     <color name="noSignal">#8b0000</color>
     <color name="veryPoor">#ff0000</color>
     <color name="poor">#ffa500</color>
