--- a/app/src/main/res/layout/activity_permissions2.xml
+++ b/app/src/main/res/layout/activity_permissions2.xml
@@ -30,8 +30,8 @@
 
     <LinearLayout
         android:id="@+id/linearLayout"
-        android:layout_width="260dp"
-        android:layout_height="106dp"
+        android:layout_width="276dp"
+        android:layout_height="95dp"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -41,7 +41,7 @@
 
         <ImageButton
             android:id="@+id/MapAccessBtn"
-            android:layout_width="127dp"
+            android:layout_width="90dp"
             android:layout_height="match_parent"
             android:layout_margin="2dp"
             android:background="#FFE9E9"
@@ -50,13 +50,24 @@
 
         <ImageButton
             android:id="@+id/CallAccessBtn"
-            android:layout_width="130dp"
+            android:layout_width="90dp"
             android:layout_height="match_parent"
             android:layout_margin="2dp"
             android:adjustViewBounds="false"
             android:background="#FFE9E9"
             android:tint="#D85C72"
             app:srcCompat="@android:drawable/stat_sys_phone_call" />
+
+        <ImageButton
+            android:id="@+id/StorageAccessBtn"
+            android:layout_width="90dp"
+            android:layout_height="match_parent"
+            android:layout_margin="2dp"
+            android:layout_weight="1"
+            android:adjustViewBounds="false"
+            android:background="#FFE9E9"
+            android:tint="#D85C72"
+            app:srcCompat="@android:drawable/sym_contact_card" />
 
     </LinearLayout>
 
